<resources>
    <string name="app_name">KFlow</string>

    <string name="show_empty_recorded">No recorded</string>
    <string name="show_empty_ongoing_recordings">No on going recordings</string>
    <string name="show_empty_scheduled_recordings">No scheduled recordings</string>

    <string name="disable_push_notification">Disable Push Notification</string>
    <string name="enable_push_notification">Enable Push Notification</string>
<!--Google Section-->
    <string name="social_login_goggle_section"><u>Google Section</u></string>
    <string name="social_login_web_client_id_message">Please set the Google Web Client ID defined on Google Cloud Console</string>
    <string name="social_login_android_sha1_message">Please note that the Android SHA1 Fingerprint must be defined on Google Cloud Console</string>
    <string name="social_login_web_client_id">Web Client ID</string>
    <string name="social_login_google_sign_in_button">Google Provider SignIn</string>
<!--Facebook Section-->
    <string name="social_login_facebook_section"><u>Facebook Section</u></string>
    <string name="social_login_facebook_app_id_message">Please set the Facebook App ID defined on Facebook Apps Dashboard</string>
    <string name="social_login_facebook_sha1_message">Please note that the Android SHA1 Fingerprint must be defined on Facebook Dashboard</string>
    <string name="social_login_facebook_app_id">Facebook App ID</string>
    <string name="social_login_facebook_secret">Facebook Secret</string>
    <string name="social_login_facebook_sign_in_button">Facebook Provider SignIn</string>

    <plurals name="show_assets">
        <item quantity="one">Show %s asset</item>
        <item quantity="other">Show %s assets</item>
    </plurals>

    <plurals name="show_updates">
        <item quantity="one">Show %s update</item>
        <item quantity="other">Show %s updates</item>
    </plurals>

    <plurals name="show_product_prices">
        <item quantity="one">Show %s product price</item>
        <item quantity="other">Show %s product prices</item>
    </plurals>

    <plurals name="show_transactions">
        <item quantity="one">Show %s transaction</item>
        <item quantity="other">Show %s transactions</item>
    </plurals>

    <plurals name="show_channels">
        <item quantity="one">Show %s channel</item>
        <item quantity="other">Show %s channels</item>
    </plurals>

    <plurals name="show_programs">
        <item quantity="one">Show %s program</item>
        <item quantity="other">Show %s programs</item>
    </plurals>

    <plurals name="favorite_count">
        <item quantity="one">%s favorite asset</item>
        <item quantity="other">%s favorite assets</item>
    </plurals>

    <plurals name="history_count">
        <item quantity="one">%s history asset</item>
        <item quantity="other">%s history assets</item>
    </plurals>

    <plurals name="show_recorded">
        <item quantity="one">Show %s recorded</item>
        <item quantity="other">Show %s recorded</item>
    </plurals>

    <plurals name="show_on_going_recording">
        <item quantity="one">Show %s on going recording</item>
        <item quantity="other">Show %s on going recordings</item>
    </plurals>

    <plurals name="show_scheduled_recording">
        <item quantity="one">Show %s scheduled recording</item>
        <item quantity="other">Show %s scheduled recordings</item>
    </plurals>
</resources>
